[package]
name = "krpc-mars"
version = "0.8.0"
authors = ["cahu"]
build = "build.rs"
license = "GPL-3.0"
edition = "2021"

[dependencies]
protobuf = "2.0"
thiserror = "1"
tokio = { version = "1.49.0", default-features = false, features = ["net", "io-util"] }

[build-dependencies]
protoc-rust = "2.0"
